@@ -276,7 +276,7 @@ let find_in_path_uncap path name =
 
 let remove_file filename =
   try
-    if Sys.file_exists filename
+    if Sys.is_regular_file filename
     then Sys.remove filename
   with Sys_error _msg ->
     ()
